fix: missing types for documents and work items in the 'Entity Type' dropdown
Refs: #74
